--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "c-vectorlib"]
 	path = c-vectorlib
 	url = git@github.com:ForAbby-X/c-vectorlib.git
+[submodule "libft"]
+	path = libft
+	url = git@github.com:olimarmite/libft.git
